# qaboard

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  01a85c17.063164f9.js  01a85c17.b96a21e8.js  01a85c17.f066a584.js  0296f4dc.02614709.js  0296f4dc.439678a2.js  0296f4dc.65abafcc.js  0296f4dc.75605f27.js  0296f4dc.8285040d.js  0296f4dc.84504bd3.js  0296f4dc.9cc6042a.js  0296f4dc.c132b62c.js  0296f4dc.c4f14b47.js  0296f4dc.c823be12.js  0296f4dc.d82f9217.js  0296f4dc.dcfdc37e.js  0296f4dc.e65a0316.js  03193456.3b156733.js  03193456.8a96377b.js  03193456.c68936ae.js  03193456.d63cd764.js  0480b142.0433862a.js  0480b142.0f381bd6.js  0480b142.2ec341e3.js  0480b142.3086ac62.js  0480b142.471da6c2.js  0480b142.4fcc4c7f.js  0480b142.596bd9e5.js  0480b142.9ed94b4d.js  0480b142.aac59281.js  0480b142.b4df3a4f.js  0480b142.b8bf8b41.js  0480b142.b9ed50d5.js  0480b142.c19ae05f.js  0480b142.c9a8b411.js  0480b142.cee9ef20.js  0480b142.f6eced05.js  (+1011 more)
backend/: Dockerfile  README.md  init.sh  pyproject.toml  restore_artifacts.py  setup.py  uwsgi.ini  wait-for-it.sh
backend/backend/: README.md  __init__.py  admin.py  alembic.ini  backend.py  clean.py  clean_big_files.py  config.py  database.py  fs_utils.py  git_utils.py  utils.py
backend/backend/alembic/: env.py  script.py.mako
backend/backend/alembic/versions/: 10dea94d2dc1_add_an_output_dir_override_folder.py  156752e2d05e_added_ids_for_git_commit_parents.py  44c55bb36f57_add_batch_batch_dir_override.py  80a0b3ed9dd1_allow_sub_projects.py  8d684ac2793b_remove_hardcoded_test_input_data_columns.py  8d84dfaf350d_convert_configuration_to_jsonb_as_.py  b0785fa8ab5a_baseline.py  c10df60dd41c_add_deleted_fields.py  c44a0b869765_convert_output_data_to_jsonb.py  c872ccb5ecf2_added_fields_useful_for_the_cis_.py
backend/backend/api/: api.py  auth.py  auto_rois.py  batch.py  commit.py  export_to_folder.py  integrations.py  milestones.py  outputs.py  tuning.py  webhooks.py
backend/backend/models/: Batch.py  CiCommit.py  LocalMocks.py  Output.py  Parameters.py  Project.py  TestInput.py  User.py  __init__.py
backend/backend/scripts/: README.md  add_output_data_storage.py  add_output_data_user.py  debug_missing_storage.py  delete_orphan_output_dir.py  delete_remaining_data_from_deleted_outputs.py  fix-nobody-manifest.py  fix_bad_output_dir_name.py  gen_parallel_migration.py  init_database.py  migrate.py  migration_utils.py  queries.sql  quota.py  remove_duplicates.py  remove_duplicates_commits.py  save_all_directories.py  user_storage_server.py
backend/deployment/: backend.ini  host.nginx.conf  init.sh  slamvizapp.ini  start-docker.sh
backend/deployment/nginx/sites-available/: default  slamvizapp
backend/slamvizapp/: __init__.py  clean.py  slamvizapp.py
backend/slamvizapp/alembic/versions/: 6f8f309611c5_rename_slam_output_to_output.py
backend/slamvizapp/api/: api.py  integrations.py  milestones.py  tuning.py
backend/slamvizapp/models/: CiCommit.py  Project.py  TestInput.py
backend/slamvizapp/scripts/: remove_duplicates.py  remove_duplicates_commits.py
(+480 files in other folders)
