# https://python-poetry.org/docs/basic-usage/
# At SIRC, to deal with SSL issues:

[tool.poetry]
name = "backend"
# name = "qaboard" # used to be backend, poetry issues..
version = "1.0.1"
description = "Backend for QA-Board"
authors = ["Arthur Flam <arthur.flam@samsung.com>"]
license="Apache-2.0"

[tool.poetry.urls]
repository="https://github.com/Samsung/qaboard"
homepage="https://samsung.github.io/qaboard"

[tool.poetry.dependencies]
python = "3.8.*"
gitpython = "*"         # manipulate git repositories
click = "*"             # build CLI tools easily
flask = "*"             # HTTP server
flask_cors = "*"        # (not used?)
flask_login = "*"       # Authentication Flows
python-ldap = "*"       # Authentication with LDAP
sqlalchemy = "*"        # ORM
sqlalchemy_utils = "*"
alembic = "*"      # Schema migrations
psycopg2 = "*"     # postgresql driver
ujson = "*"        # fast json lib
pandas = "*"       # stats
numpy = "=>1.17.3" # (needed by pandas - just we ensure python3.8 compat)
scikit-image = "*" # image processing for auto-regions of interest
uwsgi = "*"        # server
uwsgitop = "*"     # top for uwsgi
qaboard = { path = "..", optional = true } #, develop = true }
scikit-optimize = "*" # needed for auto-tuning, it's specified in qaboard, normally it should be enough but..

# Makes incremental docker builds easier
[tool.poetry.extras]
qaboard = ["qaboard"]

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[tool.poetry.scripts]
qaboard_clean = 'backend.clean:clean'
qaboard_clean_untracked_hwalg_artifacts = 'backend.clean:clean_untracked_hwalg_artifacts'
qaboard_init_database = 'backend.scripts.init_database:init_database'
